# IdleOnAutoReviewBot

./: .bashrc  .gitconfig  .gitignore  .my.cnf  Darcula_Contrast_modified.icls  Dockerfile  README.md  check_for_missing_files.py  docker-compose.yml  id_rsa.pub  id_rsa.pub.pub  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.run/: Debug App.run.xml  Run server.run.xml
.ssh/: id_ed25519  id_ed25519.orig  id_ed25519.pub  known_hosts
.virtualenvs/: get_env_details  initialize  postactivate  postdeactivate  postmkproject  postmkvirtualenv  postrmvirtualenv  preactivate  predeactivate  premkproject  premkvirtualenv  prermvirtualenv
changelog/: CHANGELOG  release_notes.txt
img_layers/: Forge_Stamp.xcf  Gem_Shop.xcf  Woodlin_Chest.xcf  bribes.xcf  family.xcf  general_banner.xcf  pay2win.xcf  w6_bubbles.xcf  w6_stamps_chests.xcf
mysite/: .env  Makefile  beta_idleonTaskSuggester.py  config.py  console_tester.py  consts.py  custom_exceptions.py  data_formatting.py  flask_app.py  flask_appOld.py  idleonTaskSuggester.py  idleon_Alchemy.py  idleon_Breeding.py  idleon_Bribes.py  idleon_Cards.py  idleon_CombatLevels.py  idleon_ConsBuildings.py  idleon_ConsDeathNote.py  idleon_ConsRefinery.py  idleon_ConsSaltLick.py  idleon_Consumables.py  idleon_Equinox.py  idleon_GemShop.py  idleon_Greenstacks.py  idleon_MaestroHands.py  idleon_Obols.py  idleon_ObolsOld.py  idleon_Pinchy.py  idleon_ProgressionTiers.py  idleon_Rift.py  idleon_Sampling.py  idleon_SkillLevels.py  idleon_Smithing.py  idleon_Stamps.py  idleon_TemplateModule.py  idleon_Trapping.py  (+9 more)
(+432 files in other folders)
