[project]
name = "idleonautoreviewbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10,<4"
dependencies = [
    "babel==2.18.0",
    "flask==3.1.3",
    "json5==0.13.0",
    "libsass==0.23.0",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "ua-parser==1.0.1",
]

[project.optional-dependencies]
dev = [
    # dev server
    "coloredlogs==15.0.1",
    "dotenv==0.9.9",
    # image tools
    "pillow==12.1.1",
    # test
    "pytest==9.0.2"
]
